feat: add playground for creating components

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "id-components",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -10,6 +12,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
+    "react-icons": "4.3.1",
     "styled-components": "5.3.5",
     "react-loading-skeleton": "2.2.0"
   },
