--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "react-icons": "4.3.1",
+    "react-select": "4.3.0",
+    "react-hook-form": "7.3.5",
     "styled-components": "5.3.5",
     "react-loading-skeleton": "2.2.0"
   },
@@ -26,6 +28,7 @@
     "@storybook/testing-library": "0.0.13",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-select": "4.0.14",
     "@types/styled-components": "5.1.25",
     "@vitejs/plugin-react": "1.3.2",
     "typescript": "4.6.4",
