--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["dist", "src"],
-  "exclude": ["node_modules"],
+  "include": ["src", "*.d.ts"],
+  "exclude": ["node_modules", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
