--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -25,11 +25,6 @@ jobs:
           node-version: 18
           cache: 'npm'
 
-      - name: Get npm cache directory
-        id: npm-cache-dir
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-
       - uses: actions/cache@v3
         id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
         with:
@@ -38,12 +33,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Config private packages
-        run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf ssh://git@github.com/
-
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: npm i
+        run: npm ci
 
       - name: Run eslint on changed files
         uses: tj-actions/eslint-changed-files@v13.3
