--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@idbi/components",
   "version": "0.5.9",
   "main": "dist/id-components.mjs",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@idbi/components"
+  },
   "files": [
     "dist/",
     "index.d.ts",
