--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
         id: changelog
         uses: TriPSs/conventional-changelog-action@v3
         with:
-          github-token: ${{ secrets.github_token }}
+          github-token: ${{ secrets.GH_TOKEN }}
           skip-git-pull: "true"
           skip-on-empty: "false"
           create-summary: true
@@ -51,7 +51,7 @@ jobs:
         uses: actions/create-release@v1
         if: steps.changelog.outputs.skipped != 'true'
         env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           tag_name: ${{ steps.changelog.outputs.tag }}
           release_name: ${{ steps.changelog.outputs.tag }}
@@ -61,9 +61,9 @@ jobs:
         with:
           node-version: '18.x'
           cache: 'npm'
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@idbi'
-      - run: npm install
+          scope: '@${{ github.repository_owner }}'
+          registry-url: https://npm.pkg.github.com/
+      - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.github_token }}
+          NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
