--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,8 @@ jobs:
     name: "Publish"
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
         # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
         with:
