--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,6 +67,8 @@ jobs:
         with:
           node-version: '18.x'
           cache: 'npm'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@${{ github.repository_owner }}'
       - run: npm ci
       - run: npm publish
         env:
