--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Configure Git
+        run: |
+          git config user.email "bot@idbi.pe"
+          git config user.name "ID BOT"
+
       - name: Conventional Changelog Action
         id: changelog
         uses: TriPSs/conventional-changelog-action@v3
@@ -56,11 +62,31 @@ jobs:
           tag_name: ${{ steps.changelog.outputs.tag }}
           release_name: ${{ steps.changelog.outputs.tag }}
           body: ${{ steps.changelog.outputs.clean_changelog }}
+
+#      # Setup .npmrc file to publish to npm
+#      - uses: actions/setup-node@v3
+#        with:
+#          node-version: 'v16.13.2'
+#          registry-url: 'https://registry.npmjs.org'
+#          scope: '@idbi'
+#      # Publish to npm
+#      - run: npm publish --access public
+#        env:
+#          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
-          cache: 'npm'
-      - run: npm ci
+          node-version: 'v16.13.2'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@idbi'
+
+      - name: Authenticate with the GitHub Package Registry
+        run:
+          echo "//npm.pkg.github.com:_authToken=${{ secrets.GITHUB_TOKEN }}" >
+          ~/.npmrc
+
+      # Publish to GitHub Packages
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
