--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,16 +77,11 @@ jobs:
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
         with:
-          node-version: 'v16.13.2'
+          node-version: '18.x'
           registry-url: 'https://npm.pkg.github.com'
-          scope: '@idbi'
-
-      - name: Authenticate with the GitHub Package Registry
-        run:
-          echo "//npm.pkg.github.com:_authToken=${{ secrets.GITHUB_TOKEN }}" >
-          ~/.npmrc
-
-      # Publish to GitHub Packages
-      - run: npm publish
+          scope: ${{ github.repository_owner }}
+      - run: npm ci
+      - name: Publish to GitHub Package Registry
+        run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.PAT }}
