--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "src/**/*.d.ts"
   ],
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/idbi/components.git"
+    "url": "https://github.com/idbi/components.git",
+    "type": "git"
   },
   "scripts": {
     "dev": "vite --port 3015",
