--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dev": "vite --port 3015",
     "build": "tsc && vite build",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "lint": "eslint --ext .tsx,.ts,.js,.jsx --ignore-path .eslintignore .",
+    "lint:fix": "eslint --ext .tsx,.ts,.js,.jsx --ignore-path .eslintignore . --fix"
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.0.0",
@@ -38,7 +40,23 @@
     "@types/react-dom": "18.0.6",
     "@types/react-select": "4.0.14",
     "@types/styled-components": "5.1.25",
+    "@typescript-eslint/eslint-plugin": "5.35.1",
+    "@typescript-eslint/parser": "5.35.1",
     "@vitejs/plugin-react": "1.3.2",
+    "eslint": "8.22.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-config-standard-with-typescript": "22.0.0",
+    "eslint-import-resolver-typescript": "3.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-n": "15.2.5",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-promise": "6.0.1",
+    "eslint-plugin-react": "7.31.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "prettier": "2.7.1",
     "typescript": "4.6.4",
     "vite": "3.0.0"
   }
