--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint:fix": "eslint --ext .tsx,.ts,.js,.jsx --ignore-path .eslintignore . --fix"
   },
   "dependencies": {
+    "@floating-ui/react-dom": "1.0.0",
     "@radix-ui/react-collapsible": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
