--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-collapsible": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "4.7.1",
     "react-is": "18.2.0",
     "react-loading-skeleton": "2.2.0",
     "react-select": "4.3.0",
