--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@floating-ui/react-dom": "1.0.0",
     "@radix-ui/react-collapsible": "^1.0.0",
+    "date-fns": "2.17.0",
     "react": "18.2.0",
+    "react-date-range": "1.1.3",
     "react-dom": "18.2.0",
     "react-icons": "4.7.1",
     "react-is": "18.2.0",
@@ -41,6 +43,7 @@
     "@storybook/react": "6.5.9",
     "@storybook/testing-library": "0.0.13",
     "@types/react": "18.0.15",
+    "@types/react-date-range": "1.1.4",
     "@types/react-dom": "18.0.6",
     "@types/react-select": "4.0.14",
     "@types/styled-components": "5.1.25",
