--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "dependencies": {
     "@floating-ui/react-dom": "1.0.0",
     "@radix-ui/react-collapsible": "^1.0.0",
+    "date-fns": "^2.17.0",
     "react": "18.2.0",
+    "react-date-range": "^1.1.3",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-is": "18.2.0",
     "react-loading-skeleton": "2.2.0",
     "react-select": "4.3.0",
