--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@floating-ui/react-dom": "1.0.0",
     "@radix-ui/react-collapsible": "^1.0.0",
     "date-fns": "^2.17.0",
+    "google-map-react": "^2.2.0",
     "react": "18.2.0",
     "react-date-range": "^1.1.3",
     "react-dom": "18.2.0",
@@ -42,6 +43,8 @@
     "@storybook/builder-vite": "0.2.2",
     "@storybook/react": "6.5.9",
     "@storybook/testing-library": "0.0.13",
+    "@types/google-map-react": "^2.1.7",
+    "@types/google.maps": "^3.51.0",
     "@types/react": "18.0.15",
     "@types/react-date-range": "1.1.4",
     "@types/react-dom": "18.0.6",
