--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@floating-ui/react-dom": "1.0.0",
     "@radix-ui/react-collapsible": "^1.0.0",
+    "@types/google-map-react": "^2.1.7",
     "date-fns": "^2.17.0",
+    "google-map-react": "2.2.0",
     "react": "18.2.0",
     "react-date-range": "^1.1.3",
     "react-dom": "18.2.0",
