--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
   },
   "dependencies": {
     "@floating-ui/react-dom": "1.0.0",
-    "@radix-ui/react-collapsible": "^1.0.0",
-    "@types/google-map-react": "^2.1.7",
-    "date-fns": "^2.17.0",
+    "@radix-ui/react-collapsible": "1.0.0",
+    "@types/google-map-react": "2.1.7",
+    "date-fns": "2.17.0",
     "google-map-react": "2.2.0",
     "react": "18.2.0",
-    "react-date-range": "^1.1.3",
+    "react-date-range": "1.1.3",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "4.7.1",
     "react-is": "18.2.0",
     "react-loading-skeleton": "2.2.0",
     "react-select": "4.3.0",
     "styled-components": "5.3.5"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "6.5.9",
-    "@storybook/addon-docs": "^6.5.12",
-    "@storybook/addon-essentials": "6.5.9",
-    "@storybook/addon-interactions": "6.5.9",
-    "@storybook/addon-links": "6.5.9",
-    "@storybook/builder-vite": "0.2.2",
-    "@storybook/react": "6.5.9",
-    "@storybook/testing-library": "0.0.13",
+    "@babel/core": "^7.21.3",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-vite": "^0.4.2",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
     "@types/react": "18.0.15",
     "@types/react-date-range": "1.1.4",
     "@types/react-dom": "18.0.6",
@@ -52,6 +52,7 @@
     "@typescript-eslint/eslint-plugin": "5.35.1",
     "@typescript-eslint/parser": "5.35.1",
     "@vitejs/plugin-react": "1.3.2",
+    "babel-loader": "^8.3.0",
     "eslint": "8.22.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
@@ -65,6 +66,7 @@
     "eslint-plugin-promise": "6.0.1",
     "eslint-plugin-react": "7.31.0",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-storybook": "^0.6.11",
     "prettier": "2.7.1",
     "typescript": "4.6.4",
     "vite": "3.0.0"
