--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -30,6 +30,8 @@ ignorePatterns:
   - "**/*.jsx"
   - "**/*.d.ts"
 rules:
+  jsx-a11y/no-static-element-interactions: off
+  jsx-a11y/click-events-have-key-events: off
   import/no-extraneous-dependencies: off
   import/extensions:
     - error
