--- a/package.json
+++ b/package.json
@@ -20,22 +20,23 @@
     "lint:fix": "eslint --ext .tsx,.ts,.js,.jsx --ignore-path .eslintignore . --fix",
     "create-docs": "node scripts/create-docs.js"
   },
-  "dependencies": {
-    "@floating-ui/react-dom": "1.0.0",
-    "@radix-ui/react-collapsible": "1.0.0",
-    "@types/google-map-react": "2.1.7",
-    "date-fns": "2.17.0",
-    "google-map-react": "2.2.0",
-    "react": "18.2.0",
-    "react-date-range": "1.1.3",
-    "react-dom": "18.2.0",
-    "react-icons": "4.7.1",
-    "react-is": "18.2.0",
-    "react-select": "4.3.0",
-    "styled-components": "5.3.5"
+  "peerDependencies": {
+    "@floating-ui/react-dom": "1.x",
+    "@radix-ui/react-collapsible": "1.x",
+    "@types/google-map-react": "*",
+    "date-fns": "2.x",
+    "google-map-react": "^2.1.10",
+    "react": ">=17.0",
+    "react-date-range": "^1.1.3",
+    "react-dom": ">=17.0",
+    "react-icons": "4.x",
+    "react-select": "4.x || 5.x",
+    "styled-components": "5.x"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
+    "@floating-ui/react-dom": "1.0.0",
+    "@radix-ui/react-collapsible": "1.0.0",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
@@ -43,6 +44,7 @@
     "@storybook/builder-vite": "^0.4.2",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@types/google-map-react": "2.1.7",
     "@types/react": "18.0.15",
     "@types/react-date-range": "1.1.4",
     "@types/react-dom": "18.0.6",
@@ -52,6 +54,7 @@
     "@typescript-eslint/parser": "5.35.1",
     "@vitejs/plugin-react": "1.3.2",
     "babel-loader": "^8.3.0",
+    "date-fns": "2.17.0",
     "eslint": "8.22.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
@@ -66,7 +69,15 @@
     "eslint-plugin-react": "7.31.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "^0.6.11",
+    "google-map-react": "2.2.0",
     "prettier": "2.7.1",
+    "react": "18.2.0",
+    "react-date-range": "1.1.3",
+    "react-dom": "18.2.0",
+    "react-icons": "4.7.1",
+    "react-is": "18.2.0",
+    "react-select": "4.3.0",
+    "styled-components": "5.3.5",
     "typescript": "4.6.4",
     "vite": "3.0.0"
   }
