--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-icons": "4.7.1",
     "react-is": "18.2.0",
     "react-select": "4.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "styled-components": "5.3.5",
     "typescript": "4.6.4",
     "vite": "3.0.0"
