--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "create-docs": "node scripts/create-docs.js"
   },
   "sideEffects": false,
+  "dependencies": {
+    "@radix-ui/react-collapsible": "1.x",
+    "react-select": "4.x || 5.x"
+  },
   "peerDependencies": {
     "@floating-ui/react-dom": "0.x || 1.x",
-    "@radix-ui/react-collapsible": "1.x",
     "@types/google-map-react": "*",
     "date-fns": "2.x",
     "google-map-react": "^2.1.10",
@@ -33,13 +36,11 @@
     "react-date-range": "^1.1.3",
     "react-dom": ">=17.0",
     "react-icons": "4.x",
-    "react-select": "4.x || 5.x",
     "styled-components": "5.x"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@floating-ui/react-dom": "1.0.0",
-    "@radix-ui/react-collapsible": "1.0.0",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
@@ -79,7 +80,6 @@
     "react-dom": "18.2.0",
     "react-icons": "4.7.1",
     "react-is": "18.2.0",
-    "react-select": "4.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "styled-components": "5.3.5",
     "typescript": "4.6.4",
